Alterações tela produto

--- a/Inicial/pom.xml
+++ b/Inicial/pom.xml
@@ -31,5 +31,10 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
